# tafker

./: .gitignore  README.md  config.sample.yaml  init.ipy  pyoxidizer.bzl  pyproject.toml  requirements.txt  tafker.service  tafker.sh  tasker.service  tasker.sh
scripts/: build.sh  gen-requirements.sh  pgrep-tafker.sh
tafker/: __init__.py  __init__.py.00b0361caee548ad4fb2cfd710d90313.py  __main__.py  const.py  logger.py  main.py  pgrep.py.66bcca9ccdf75235c1a229746f40f914.py  proc.py  shell.py  snowflakes.py  tafker.py  win.py
