[tool.poetry]
name = "tafker"
version = "0.1.0"
description = "Simple automation system for the Linux Desktop"
authors = ["Philipp Schmitt <philipp@schmitt.co>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.4.4"
psutil = "^5.9.1"
asyncclick = "^8.1.3"
anyio = "^3.6.1"
uvloop = "^0.16.0"
PyYAML = "^6.0"
xdg = "^5.1.1"
python-xlib = "^0.31"
ewmh = "^0.1.6"
setproctitle = "^1.2.3"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
black = "^22.3"
isort = "^5.10.1"
pyoxidizer = "^0.22.0"
pylint = "^2.14.1"

[tool.poetry.scripts]
tafker = "tafker.tafker:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.pylint.messages_control]
max-line-length = 80
disable = [
  "logging-fstring-interpolation",
  "missing-docstring"
]
ignore-patterns = ".+.py..+.py"
logging-format-style = "new"
extension-pkg-allow-list = ["setproctitle"]
