[tool.poetry]
name = "tafker"
version = "0.1.0"
description = "Simple automation system for the Linux Desktop"
authors = ["Philipp Schmitt <philipp@schmitt.co>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.3.3"
psutil = "^5.9.4"
asyncclick = "^8.1.3"
anyio = "^3.6.2"
uvloop = "^0.17.0"
PyYAML = "^6.0"
xdg = "^6.0.0"
python-xlib = "^0.33"
ewmh = "^0.1.6"
setproctitle = "^1.3.2"

[tool.poetry.dev-dependencies]
ipython = "^8.12.0"
black = "^23.3"
isort = "^5.12.0"
pyoxidizer = "^0.24.0"
pylint = "^2.17.2"

[tool.poetry.scripts]
tafker = "tafker.tafker:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.pylint.messages_control]
max-line-length = 80
disable = [
  "logging-fstring-interpolation",
  "missing-docstring"
]
ignore-patterns = ".+.py..+.py"
logging-format-style = "new"
extension-pkg-allow-list = ["setproctitle"]
